--- a/project/assets/css/shared.css
+++ b/project/assets/css/shared.css
@@ -1,3 +1,10 @@
+* {
+  box-sizing: border-box;
+}
+body {
+  font-family: Oswald, sans-serif;
+  margin: 0;
+}
 .main-header {
   width: 100%;
   background-color: #2ddf5c;
