packages done entering next module positions

--- a/diving-deeper-02/main.css
+++ b/diving-deeper-02/main.css
@@ -8,7 +8,7 @@ body {
 }
 
 #product-overview {
-    background: #ff1b68;
+    background: #E91E63;
     width: 100%;
     height: 528px;
     padding: 10px;
