--- a/project/assets/css/shared.css
+++ b/project/assets/css/shared.css
@@ -56,13 +56,13 @@ body {
 }
 .main-nav__item--cta a {
   color: #fff;
-  background-color: #ff1b68;
+  background-color: #E91E63;
   padding: 8px 16px;
   border-radius: 8px;
 }
 .main-nav__item--cta a:hover,
 .main-nav__item--cta a:active {
-  color: #ff1b68;
+  color: #E91E63;
   background-color: #fff;
   padding: 8px 16px;
   border-radius: 8px;
