--- a/project/assets/css/shared.css
+++ b/project/assets/css/shared.css
@@ -13,11 +13,16 @@
 body {
   font-family: Oswald, sans-serif;
   margin: 0;
+  padding-top: 90px;
 }
 .main-header {
   width: 100%;
   background-color: #8BC34A;
   padding: 20px 20px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
 }
 .main-header > div {
   display: inline-block;
@@ -69,7 +74,7 @@ body {
   border: none;
 }
 .main-footer {
-  background: #1a2b16;
+  background: #1B5E20;
   padding: 32px;
   margin-top: 48px;
 }
