--- a/project/assets/css/shared.css
+++ b/project/assets/css/shared.css
@@ -13,16 +13,16 @@
 body {
   font-family: Oswald, sans-serif;
   margin: 0;
-  padding-top: 90px;
+  padding-top: 117px;
 }
 .main-header {
   width: 100%;
   background-color: #8BC34A;
-  padding: 20px 20px;
+  padding: 32px;
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 100;
+  z-index: 1;
 }
 .main-header > div {
   display: inline-block;
@@ -31,6 +31,11 @@ body {
   color: #388E3C;
   font-size: 2em;
   text-decoration: none;
+  display: inline-block;
+  height: 2em;
+}
+.main-header__brand img {
+  height: 100%;
 }
 .main-nav {
   display: inline-block;
