radial gradients testing

--- a/project/assets/css/main.css
+++ b/project/assets/css/main.css
@@ -3,7 +3,7 @@
   /* background-image: url('../images/freedom.jpg'); */
   /* background-size: cover; */
   /* background-position: left 0% bottom 80%; */
-  background-image: linear-gradient(35deg, red, blue);
+  background-image: radial-gradient(ellipse 50px 100px at 20% 50%, red, white, blue);
   width: 100%;
   height: calc(100vh - 143px);
   padding: 20px;
