--- a/project/assets/css/main.css
+++ b/project/assets/css/main.css
@@ -1,9 +1,7 @@
 #product-overview {
   color: #fff;
-  /* background-image: url('../images/freedom.jpg'); */
-  /* background-size: cover; */
-  /* background-position: left 0% bottom 80%; */
-  background-image: radial-gradient(ellipse 50px 100px at 20% 50%, red, white, blue);
+  background: linear-gradient(to top, rgba(80, 68, 18, 0.7) 10%, transparent), url('../images/freedom.jpg') left 0% bottom 80%/cover no-repeat border-box, radial-gradient(ellipse 50px 100px at 20% 50%, red, white, blue), #C2185B;
+  /* background-image: radial-gradient(ellipse 50px 100px at 20% 50%, red, white, blue); */
   width: 100%;
   height: calc(100vh - 143px);
   padding: 20px;
