--- a/project/assets/css/main.css
+++ b/project/assets/css/main.css
@@ -93,6 +93,7 @@
   border: 2px solid #ddd;
   border-radius: 50%;
   margin: auto;
+  padding: 20px;
 }
 .key-feature__description {
   text-align: center;
