--- a/project/assets/css/shared.css
+++ b/project/assets/css/shared.css
@@ -15,6 +15,17 @@ body {
   margin: 0;
   padding-top: 143px;
 }
+
+.backdrop {
+  position: absolute;
+  display: none;
+  z-index: 101;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+}
 .main-header {
   width: 100%;
   background-color: #8BC34A;
