--- a/project/assets/css/customers.css
+++ b/project/assets/css/customers.css
@@ -1,5 +1,5 @@
 .testimonial {
-  font-size: 1.5rem;;
+  font-size: 1.3rem;;
   margin: 48px 0;
 }
 
@@ -13,6 +13,7 @@
 }
 .testimonial__image-container{
   width: 60%;
+  max-width: 640px;
   display: inline-block;
   vertical-align: middle;
   box-shadow: 2px 2px 2px 4px rgba(0, 0, 0, 0.3);
