adding modal start

--- a/project/assets/css/main.css
+++ b/project/assets/css/main.css
@@ -2,9 +2,10 @@
   color: #fff;
   background: linear-gradient(to top, rgba(80, 68, 18, 0.7) 10%, transparent), url('../images/freedom.jpg') left 0% bottom 80%/cover no-repeat border-box, radial-gradient(ellipse 50px 100px at 20% 50%, red, white, blue), #C2185B;
   /* background-image: radial-gradient(ellipse 50px 100px at 20% 50%, red, white, blue); */
-  width: 100%;
-  height: calc(100vh - 143px);
-  padding: 20px;
+  width: 100vw;
+  height: 66vh;
+  /* height: calc(100vh - 143px); */
+  padding: 1.25rem;
   margin-top: 0;
   position: relative;
 }
@@ -16,7 +17,7 @@
   color: white;
   font-family: Anton, sans-serif;
   position: absolute;
-  left: 32px;
+  left: 2rem;
   bottom: 25%;
 }
 .plan__list {
@@ -27,8 +28,8 @@
 .plan {
   background: #C8E6C9;
   text-align: center;
-  padding: 16px;
-  margin: 8px;
+  padding: 1rem;
+  margin: 0.5rem;
   display: inline-block;
   width: 30%;
   vertical-align: middle;
@@ -41,7 +42,7 @@
 .plan__annotation {
   background: #fff;
   color: #388E3C;
-  padding: 8px;
+  padding: 0.5rem;
   border-radius: 8px;
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.7);
 }
@@ -63,17 +64,17 @@
   margin: 0;
 }
 .plan__condition {
-  margin: 8px 0;
+  margin: 0.5rem 0;
 }
 
 #key-features {
   background: #E91E63;
-  margin-top: 80px;
+  margin-top: 5rem;
 }
 #key-features .section-title {
   color: #fff;
-  margin: 32px;
-  padding: 16px;
+  margin: 2rem;
+  padding: 1rem;
 }
 .key-features__list {
   list-style: none;
@@ -93,11 +94,11 @@
   border: 2px solid #ddd;
   border-radius: 50%;
   margin: auto;
-  padding: 20px;
+  padding: 1.25rem;
 }
 .key-feature__description {
   text-align: center;
   font-weight: bold;
   color: #fff;
-  font-size: 20px;
+  font-size: 1.25rem;
 }
