--- a/project/assets/css/customers.css
+++ b/project/assets/css/customers.css
@@ -1,6 +1,6 @@
 .testimonial {
-  font-size: 1.3rem;;
-  margin: 48px 0;
+  font-size: 1.25rem;
+  margin: 3rem 0;
 }
 
 .testimonial__list {
@@ -9,7 +9,7 @@
 }
 
 .testimonial:first-of-type {
-  margin-top: 96px;
+  margin-top: 6rem;
 }
 .testimonial__image-container{
   width: 60%;
@@ -24,7 +24,7 @@
 }
 .testimonial__info {
   text-align: right;
-  padding: 16px;
+  padding: 1rem;
   display: inline-block;
   vertical-align: middle;
   width: 35%;
@@ -39,13 +39,14 @@
 }
 
 .testimonial__name {
-  margin: 4px;
+  margin: 0.25rem;
   color: #F44336;
+  font-size: 2rem;
 }
 
 .testimonial__subtitle {
   margin: 0;
-  font-size: 1.3em;
+  font-size: 1.25rem;
   color: #BDBDBD;
 }
 
@@ -60,5 +61,5 @@
 }
 
 .testimonial__text {
-  margin: 3px;
+  margin: 0.25rem;
 }
