--- a/project/assets/css/packages.css
+++ b/project/assets/css/packages.css
@@ -1,5 +1,5 @@
 main {
-  padding-top: 32px;
+  padding-top: 2rem;
 }
 .background {
   background: url('../images/plans-background.jpg') center/cover;
@@ -14,7 +14,7 @@ main {
   background: rgba(104, 159, 56, 0.95);
   border: 4px solid #388E3C;
   border-left: none;
-  margin: 16px 0;
+  margin: 1rem 0;
   width: 80%;
   position: relative;
 }
@@ -26,7 +26,7 @@ main {
 .package a {
   text-decoration: none;
   display: block;
-  padding: 32px;
+  padding: 2rem;
 }
 .package .package__title {
   color: #212121;
@@ -43,15 +43,15 @@ main {
   position: absolute;
   top: 0;
   right: 0;
-  margin: 16px;
-  padding: 8px;
+  margin: 1rem;
+  padding: 0.5rem;
   background: #D50000;
 }
 .package .package__text {
   background: #fff;
   color: #388E3C;
   border: 2px solid #388E3C;
-  padding: 16px;
+  padding: 1rem;
 }
 #free {
   /* background: #C8E6C9; */
