--- a/project/assets/css/shared.css
+++ b/project/assets/css/shared.css
@@ -18,19 +18,19 @@ body {
 }
 
 .backdrop {
-  position: absolute;
+  position: fixed;
   display: none;
   z-index: 101;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.7);
 }
 .main-header {
   width: 100%;
   background-color: #8BC34A;
-  padding: 32px;
+  padding: 2rem;
   position: fixed;
   top: 0;
   left: 0;
@@ -41,10 +41,10 @@ body {
 }
 .main-header__brand {
   color: #388E3C;
-  font-size: 2em;
+  font-size: 2rem;
   text-decoration: none;
   display: inline-block;
-  height: 2em;
+  height: 2rem;
 }
 .main-header__brand img {
   height: 100%;
@@ -61,7 +61,7 @@ body {
 }
 .main-nav__item {
   display: inline-block;
-  margin: 10px;
+  margin: 0.6rem;
 }
 .main-nav__item:hover {
 }
@@ -69,7 +69,7 @@ body {
   color: #388E3C;
   text-decoration: none;
   font-weight: bold;
-  padding-bottom: 5px;
+  padding-bottom: 0.35rem;
 }
 .main-nav__item a:hover,
 .main-nav__item a:active {
@@ -79,21 +79,21 @@ body {
 .main-nav__item--cta a {
   color: #fff;
   background-color: #E91E63;
-  padding: 8px 16px;
+  padding: 0.5rem 1rem;
   border-radius: 8px;
 }
 .main-nav__item--cta a:hover,
 .main-nav__item--cta a:active {
   color: #E91E63;
   background-color: #fff;
-  padding: 8px 16px;
+  padding: 0.5rem 1rem;
   border-radius: 8px;
   border: none;
 }
 .main-footer {
   background: #1B5E20;
-  padding: 32px;
-  margin-top: 48px;
+  padding: 2rem;
+  margin-top: 3rem;
 }
 .main-footer__links {
   list-style: none;
@@ -103,7 +103,7 @@ body {
 }
 .main-footer__link {
   display: inline-block;
-  margin: 0 16px;
+  margin: 0 1rem;
 }
 .main-footer__link a {
   text-decoration: none;
@@ -116,7 +116,7 @@ body {
 .button {
   background: #388E3C;
   color: #fff;
-  padding: 4px 16px;
+  padding: 0.25rem 1rem;
   border-radius: 8px;
   font: inherit;
   font-weight: bold;
