--- a/project/assets/css/shared.css
+++ b/project/assets/css/shared.css
@@ -14,13 +14,14 @@
 body {
   font-family: Oswald, sans-serif;
   margin: 0;
-  padding-top: 143px;
+  padding-top: 110px;
+  /* overflow-y: hidden; */
 }
 
 .backdrop {
   position: fixed;
   display: none;
-  z-index: 101;
+  z-index: 100;
   top: 0;
   left: 0;
   width: 100vw;
@@ -34,7 +35,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 10;
 }
 .main-header > div {
   display: inline-block;
@@ -45,6 +46,7 @@ body {
   text-decoration: none;
   display: inline-block;
   height: 2rem;
+  vertical-align: middle;
 }
 .main-header__brand img {
   height: 100%;
@@ -52,7 +54,8 @@ body {
 .main-nav {
   display: inline-block;
   text-align: right;
-  width: calc(100% - 72px);
+  width: calc(100% - 122px);
+  z-index: 1;
 }
 .main-nav__items{
   margin: 0;
@@ -65,7 +68,8 @@ body {
 }
 .main-nav__item:hover {
 }
-.main-nav__item a {
+.main-nav__item a,
+.mobile-nav__item a {
   color: #388E3C;
   text-decoration: none;
   font-weight: bold;
@@ -76,20 +80,76 @@ body {
   color: #fff;
   border-bottom: 5px solid #388E3C;
 }
-.main-nav__item--cta a {
+.main-nav__item--cta a,
+.mobile-nav__item--cta a {
   color: #fff;
   background-color: #E91E63;
   padding: 0.5rem 1rem;
   border-radius: 8px;
 }
 .main-nav__item--cta a:hover,
-.main-nav__item--cta a:active {
+.main-nav__item--cta a:active,
+.mobile-nav__item--cta a:hover,
+.mobile-nav__item--cta a:active {
   color: #E91E63;
   background-color: #fff;
   padding: 0.5rem 1rem;
   border-radius: 8px;
   border: none;
 }
+
+/* mobile nav */
+.mobile-nav {
+  position: fixed;
+  display: none;
+  z-index: 101;
+  top: 0;
+  left: 0;
+  background: white;
+  width: 80%;
+  height: 100vh;
+}
+
+.mobile-nav__items {
+  width: 90%;
+  height: 100%;
+  list-style: none;
+  margin: 10% auto;
+  padding: 0;
+  text-align: center;
+}
+
+.mobile-nav__item {
+  margin: 1rem 0;
+}
+
+.mobile-nav__item a {
+  font-size: 1.5rem;
+}
+
+.toggle-button {
+  width: 3rem;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  padding-top: 0;
+  padding-bottom: 0;
+  vertical-align: middle;
+}
+
+.toggle-button:focus {
+  outline: none;
+}
+
+.toggle-button__bar {
+  width: 100%;
+  height: 0.2rem;
+  background: black;
+  display: block;
+  margin: 0.6rem 0;
+}
+
+/* footer */
 .main-footer {
   background: #1B5E20;
   padding: 2rem;
@@ -130,4 +190,7 @@ body {
 }
 .button:focus {
   outline: none;
+}
+.open {
+  display: block !important;
 }
