responsive done starting forms

--- a/project/assets/css/shared.css
+++ b/project/assets/css/shared.css
@@ -42,10 +42,9 @@ body {
 }
 .main-header__brand {
   color: #388E3C;
-  font-size: 2rem;
   text-decoration: none;
   display: inline-block;
-  height: 2rem;
+  height: 3rem;
   vertical-align: middle;
 }
 .main-header__brand img {
@@ -58,9 +57,7 @@ body {
   z-index: 1;
 }
 .main-nav__items{
-  margin: 0;
-  padding: 0;
-  list-style: none;
+  display: none;
 }
 .main-nav__item {
   display: inline-block;
@@ -135,6 +132,8 @@ body {
   padding-top: 0;
   padding-bottom: 0;
   vertical-align: middle;
+  position: absolute;
+  right: 2.5rem;
 }
 
 .toggle-button:focus {
@@ -162,8 +161,7 @@ body {
   text-align: center;
 }
 .main-footer__link {
-  display: inline-block;
-  margin: 0 1rem;
+  margin: 1rem 0;
 }
 .main-footer__link a {
   text-decoration: none;
@@ -193,4 +191,19 @@ body {
 }
 .open {
   display: block !important;
+}
+@media (min-width: 729px) {
+  .main-nav__items{
+    display: block;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+  .toggle-button {
+    display: none;
+  }
+  .main-footer__link {
+    display: inline-block;
+    margin: 0 1rem;
+  }
 }
