--- a/project/assets/css/customers.css
+++ b/project/assets/css/customers.css
@@ -9,14 +9,10 @@
 }
 
 .testimonial:first-of-type {
-  margin-top: 6rem;
+  margin-top: 3rem;
 }
 .testimonial__image-container{
-  width: 60%;
-  max-width: 640px;
-  display: inline-block;
-  vertical-align: middle;
-  box-shadow: 2px 2px 2px 4px rgba(0, 0, 0, 0.3);
+  width: 100%;
 }
 .testimonial__image {
   width: 100%;
@@ -25,9 +21,6 @@
 .testimonial__info {
   text-align: right;
   padding: 1rem;
-  display: inline-block;
-  vertical-align: middle;
-  width: 35%;
 }
 
 #customer-2.testimonial {
@@ -62,4 +55,30 @@
 
 .testimonial__text {
   margin: 0.25rem;
+}
+@media (min-width: 729px) {
+  .testimonial {
+    margin: 3rem auto;
+    max-width: 90rem;
+  }
+  .testimonial:first-of-type {
+    margin-top: 6rem;
+  }
+  .testimonial__info {
+    text-align: right;
+    padding: 1rem;
+    display: inline-block;
+    vertical-align: middle;
+    width: 35%;
+  }
+  .testimonial__image-container{
+    width: 60%;
+    max-width: 640px;
+    display: inline-block;
+    vertical-align: middle;
+    box-shadow: 2px 2px 2px 4px rgba(0, 0, 0, 0.3);
+  }
+  .testimonial__info {
+    width: 35%;
+  }
 }
