--- a/project/assets/css/main.css
+++ b/project/assets/css/main.css
@@ -26,10 +26,6 @@
   text-align: center;
 }
 
-/* .plan__list {
-  width: 100%;
-  text-align: center;
-} */
 .plan {
   background: #C8E6C9;
   text-align: center;
@@ -40,7 +36,6 @@
 .plan--highlighted {
   background: #689F38;
   color: #fff;
-  /* box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.7); */
 }
 .plan__annotation {
   background: #fff;
@@ -86,9 +81,9 @@
   text-align: center;
 }
 .key-feature {
-  display: inline-block;
-  width: 30%;
+  width: 100%;
   vertical-align: top;
+  padding-bottom: 2rem;
 }
 .key-feature__image {
   background: #FCE4EC;
@@ -157,7 +152,7 @@
 }
 
 /* media queries */
-@media (min-width: 728px) {
+@media (min-width: 729px) {
   #product-overview {
     height: 50vh;
   }
@@ -173,44 +168,21 @@
     text-align: center;
   }
   .plan {
-    background: #C8E6C9;
-    text-align: center;
-    padding: 1rem;
     margin: 0.5rem;
     display: inline-block;
     width: 30%;
     vertical-align: middle;
+    min-width: 10rem;
+    max-width: 25rem;
   }
   .plan--highlighted {
-    background: #689F38;
-    color: #fff;
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.7);
   }
-  .plan__annotation {
-    background: #fff;
-    color: #388E3C;
-    padding: 0.5rem;
-    border-radius: 8px;
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.7);
+
+  .key-feature {
+    display: inline-block;
+    width: 30%;
+    max-width: 25rem;
   }
-  .plan__title {
-    color: #388E3C;
-  }
-  .plan--highlighted .plan__title {
-    color: #fff;
-  }
-  .plan__price {
-    color: #555;
-  }
-  .plan--highlighted .plan__price {
-    color: #388E3C;
-  }
-  .plan__conditions {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  .plan__condition {
-    margin: 0.5rem 0;
-  }
+
 }
