--- a/project/assets/css/packages.css
+++ b/project/assets/css/packages.css
@@ -10,7 +10,6 @@ main {
   height: 100vh;
 }
 .package {
-  /* background: #8BC34A; */
   background: rgba(104, 159, 56, 0.95);
   border: 4px solid #388E3C;
   border-left: none;
@@ -54,11 +53,10 @@ main {
   padding: 1rem;
 }
 #free {
-  /* background: #C8E6C9; */
   background: rgba(200, 230, 201, 0.95);
   float: right;
+  border: 4px solid #388E3C;
   border-right: none;
-  border-left: 4px solid #388E3C;
   text-align: right;
 }
 #free:hover,
@@ -77,4 +75,18 @@ main {
 }
 #premium h2 {
   color: #BDBDBD;
+}
+@media (min-width: 729px) {
+  main {
+    max-width: 90rem;
+    margin: 0 auto;
+  }
+}
+@media (min-width: 90rem) {
+  .package {
+    border: 4px solid #388E3C;
+  }
+  #free {
+    border: 4px solid #388E3C;
+  }
 }
