--- a/project/assets/css/main.css
+++ b/project/assets/css/main.css
@@ -14,7 +14,7 @@
 
 #product-overview h1 {
   color: white;
-  font-family: Anton, sans-serif;
+  font-family: Oswald;, sans-serif;
   position: absolute;
   left: 2rem;
   bottom: 25%;
