--- a/project/assets/css/shared.css
+++ b/project/assets/css/shared.css
@@ -1,21 +1,29 @@
 /* colors */
-.dark-primary-color    { background: #388E3C; }
+/* .dark-primary-color    { background: #388E3C; }
 .default-primary-color { background: #4CAF50; }
 .light-primary-color   { background: #C8E6C9; }
 .text-primary-color    { color: #FFFFFF; }
 .accent-color          { background: #8BC34A; }
 .primary-text-color    { color: #212121; }
 .secondary-text-color  { color: #757575; }
-.divider-color         { border-color: #BDBDBD; }
+.divider-color         { border-color: #BDBDBD; } */
+/* fonts */
+@import url('https://fonts.googleapis.com/css?family=Anton');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
+@import url('https://fonts.googleapis.com/css?family=Oswald:400,700');
+
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: Oswald, sans-serif;
+  font-family: "Oswald", sans-serif;
   margin: 0;
   padding-top: 110px;
   /* overflow-y: hidden; */
+}
+main {
+  min-height: calc(100vh - 15rem);
 }
 
 .backdrop {
@@ -189,6 +197,14 @@ body {
 .button:focus {
   outline: none;
 }
+
+.button[disabled] {
+  cursor: not-allowed;
+  border: #a1a1a1;
+  background: #ccc;
+  color: #a1a1a1;
+}
+
 .open {
   display: block !important;
 }
