--- a/project/assets/css/shared.css
+++ b/project/assets/css/shared.css
@@ -44,31 +44,25 @@ main {
   top: 0;
   left: 0;
   z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-.main-header > div {
-  display: inline-block;
-}
+
 .main-header__brand {
   color: #388E3C;
   text-decoration: none;
-  display: inline-block;
-  height: 3rem;
-  vertical-align: middle;
 }
 .main-header__brand img {
-  height: 100%;
+  height: 3rem;
 }
 .main-nav {
-  display: inline-block;
-  text-align: right;
-  width: calc(100% - 122px);
   z-index: 1;
 }
 .main-nav__items{
   display: none;
 }
 .main-nav__item {
-  display: inline-block;
   margin: 0.6rem;
 }
 .main-nav__item:hover {
@@ -116,12 +110,15 @@ main {
 }
 
 .mobile-nav__items {
-  width: 90%;
+  width: 80%;
   height: 100%;
   list-style: none;
-  margin: 10% auto;
   padding: 0;
-  text-align: center;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
 }
 
 .mobile-nav__item {
@@ -166,10 +163,13 @@ main {
   list-style: none;
   margin: 0;
   padding: 0;
-  text-align: center;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
 }
 .main-footer__link {
-  margin: 1rem 0;
+  margin: 0.5rem 0;
 }
 .main-footer__link a {
   text-decoration: none;
@@ -210,7 +210,9 @@ main {
 }
 @media (min-width: 729px) {
   .main-nav__items{
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
     margin: 0;
     padding: 0;
     list-style: none;
@@ -218,8 +220,10 @@ main {
   .toggle-button {
     display: none;
   }
+  .main-footer__links {
+    flex-flow: row;
+  }
   .main-footer__link {
-    display: inline-block;
     margin: 0 1rem;
   }
 }
