--- a/project/assets/css/customers.css
+++ b/project/assets/css/customers.css
@@ -12,11 +12,14 @@
   margin-top: 3rem;
 }
 .testimonial__image-container{
-  width: 100%;
+  width: 80%;
+  transform: skew(20deg);
+  overflow: hidden;
 }
 .testimonial__image {
   width: 100%;
   vertical-align: top;
+  transform: skew(-20deg) scale(1.4);
 }
 .testimonial__info {
   text-align: right;
