--- a/project/assets/css/main.css
+++ b/project/assets/css/main.css
@@ -110,6 +110,9 @@
 .modal {
   position: fixed;
   display: none;
+  opacity: 0;
+  transform: translateY(-3rem);
+  transition: opacity 0.5s cubic-bezier(0.45, 0.01, 0.58, 1), transform 0.8s cubic-bezier(0.45, 0.01, 0.58, 1);
   z-index: 200;
   top: 30%;
   left: 30%;
