--- a/project/assets/css/shared.css
+++ b/project/assets/css/shared.css
@@ -33,6 +33,8 @@ main {
 .backdrop {
   position: fixed;
   display: none;
+  opacity: 0;
+  transition: opacity 0.5s linear;
   z-index: 100;
   top: 0;
   left: 0;
@@ -104,13 +106,15 @@ main {
 /* mobile nav */
 .mobile-nav {
   position: fixed;
-  display: none;
+  /* display: none; */
   z-index: 101;
   top: 0;
   left: 0;
   background: white;
   width: 80%;
   height: 100vh;
+  transform: translateX(-100%);
+  transition: transform 0.3s ease-out;
 }
 
 .mobile-nav__items {
@@ -213,7 +217,10 @@ main {
 
 .open {
   display: block !important;
+  opacity: 1 !important;
+  transform: translateY(0) !important;
 }
+
 @media (min-width: 729px) {
   .main-nav__items{
     display: flex;
