--- a/project/assets/css/customers.css
+++ b/project/assets/css/customers.css
@@ -60,6 +60,10 @@
   margin: 0.25rem;
   white-space: pre-line;
 }
+#customer-1:hover .testimonial__image-container {
+  animation: flip-customer 1s ease-out forwards;
+}
+
 @media (min-width: 729px) {
   .testimonial {
     margin: 3rem auto;
@@ -83,5 +87,17 @@
   }
   .testimonial__info {
     width: 35%;
+  }
+}
+
+@keyframes flip-customer {
+  0% {
+    transform: rotateY(0) skew(20deg);
+  }
+  50% {
+    transform: rotateY(160deg) skew(20deg);
+  }
+  100% {
+    transform: rotateY(360deg) skew(20deg);
   }
 }
