--- a/project/assets/css/customers.css
+++ b/project/assets/css/customers.css
@@ -68,6 +68,9 @@
   .testimonial {
     margin: 3rem auto;
     max-width: 90rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
     align-items: center;
     justify-content: space-around;
